@@ -560,6 +560,14 @@ Release 2.8.0 - UNRELEASED
     HDFS-8247. TestDiskspaceQuotaUpdate#testAppendOverTypeQuota is failing.
     (Xiaoyu Yao via cnauroth)
 
+    HDFS-8206. Fix the typos in hadoop-hdfs-httpfs. (Brahma Reddy Battula via xyao)
+
+    HDFS-8205. CommandFormat#parse() should not parse option as
+    value of option. (Peter Shi and Xiaoyu Yao via Arpit Agarwal)
+
+    HDFS-8232. Missing datanode counters when using Metrics2 sink interface.
+    (Anu Engineer via cnauroth)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
